# Nikolaj

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
bot_telega_nikolaj/: bot.py  bot_core.py
